--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "bos-couchdb",
   "version": "0.2.0",
   "description": "CouchDB service for BlueOak Server",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:BlueOakJS/bos-couchdb.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "mocha --check-leaks test/unit; npm run lint",
