--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "eslint": "^2.1.0",
     "mocha": "^2.4.5",
     "nock": "^7.2.2"
-  }
+  },
+  "files": [
+    "lib",
+    "index.js",
+    "LICENSE"
+  ]
 }
