--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "debug": "^2.2.0",
     "lodash": "^4.5.0",
     "nano": "^6.2.0",
+    "require-dir": "^0.3.0",
     "verror": "^1.6.1"
   },
   "devDependencies": {
@@ -39,7 +40,7 @@
     "nock": "^7.2.2"
   },
   "files": [
-    "lib",
+    "lib/",
     "index.js",
     "LICENSE"
   ]
