--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --check-leaks test/unit; npm run lint",
+    "test-integration": "mocha --check-leaks test/integration",
     "lint": "eslint index.js lib test && echo lint complete."
   },
   "author": "Patrick Wolf <patrick.wolf@pointsource.com>",
@@ -27,17 +28,17 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^2.2.0",
-    "lodash": "^4.5.0",
+    "lodash": "^4.16.5",
     "nano": "^6.2.0",
     "q": "^1.4.1",
     "require-dir": "^0.3.0",
-    "verror": "^1.6.1"
+    "verror": "^1.8.1"
   },
   "devDependencies": {
     "blueoak-server": "^2.1.0",
-    "eslint": "^2.1.0",
-    "mocha": "^2.4.5",
-    "nock": "^7.2.2"
+    "eslint": "^3.9.0",
+    "mocha": "^3.1.2",
+    "nock": "^9.0.2"
   },
   "files": [
     "lib/",
