--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "mocha --check-leaks test/unit; npm run lint",
     "test-integration": "mocha --check-leaks test/integration",
-    "lint": "eslint index.js lib test && echo lint complete."
+    "lint": "eslint index.js lib test && echo lint complete.",
+    "postinstall": "typings install || echo For development time Definitely Typed support: 'npm install -g typings && typings install'"
   },
   "author": "Patrick Wolf <patrick.wolf@pointsource.com>",
   "contributors": [
