--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bos-couchdb",
-  "version": "0.3.0",
+  "version": "1.0.0-beta.1",
   "description": "CouchDB service for BlueOak Server",
   "repository": {
     "type": "git",
